--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@arcgis/core": "^4.28.10",
+    "@badrap/bar-of-progress": "^0.2.2",
+    "axios": "^1.6.5",
+    "geolib": "^3.3.4",
+    "mapbox-gl": "^3.0.1",
     "next": "14.0.4",
     "react": "^18",
     "react-date-range": "^2.0.0-alpha.4",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
+    "react-map-gl": "^7.1.7",
     "react-responsive": "^9.0.2",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
